# Cpp-Platformer

./: CMakeLists.txt  README.md
game/: main.cpp
game/entities/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
game/utils/: fpscounter.cpp  fpscounter.h
game/window/: GameWindow.cpp  GameWindow.h
